Initial attempts at adding legs to creature

--- a/CG_F23_Program2_WoodLandon.html
+++ b/CG_F23_Program2_WoodLandon.html
@@ -6,21 +6,28 @@
 <canvas id="gl-canvas" width="512"" height="512"> </canvas>
 
 <div>
-    body angle -180 <input id="slider1" type="range"
+    body angle -180 <input id="slider0" type="range"
      min="-180" max="180" step="10" value="0"
       />
      180
 </div>
     
 <div>
-    lower arm angle -180 <input id="slider2" type="range"
-     min="-180" max="180" step="10" value="0"
+    lower arm angle 0 <input id="slider1" type="range"
+     min="0" max="180" step="5" value="0"
       />
      180
 </div>
     
 <div>
-    upper arm angle -180 <input id="slider3" type="range"
+    upper arm angle -180 <input id="slider2" type="range"
+     min="-180" max="180" step="10" value="0"
+      />
+     180
+</div>
+
+<div>
+    C angle -180 <input id="slider3" type="range"
      min="-180" max="180" step="10" value="0"
       />
      180
