--- a/CG_F23_Program2_WoodLandon.html
+++ b/CG_F23_Program2_WoodLandon.html
@@ -33,6 +33,13 @@
      180
 </div>
 
+<p> </p>
+<button id = "Button5">Increase theta</button>
+<button id = "Button6">Decrease theta</button>
+<button id = "Button7">Increase phi</button>
+<button id = "Button8">Decrease phi</button>
+<p> </p>
+
 <script id="vertex-shader" type="x-shader/x-vertex">
 #version 300 es
 
@@ -40,13 +47,14 @@ in vec4 aPosition;
 in vec4 aColor;
 out vec4 vColor;
 
-uniform mat4 modelViewMatrix;
-uniform mat4 projectionMatrix;
+uniform mat4 uModelViewMatrix;
+uniform mat4 uProjectionMatrix;
+uniform mat3 uNormalMatrix;
 
 void main()
 {
     vColor = aColor;
-    gl_Position = projectionMatrix * modelViewMatrix * aPosition;
+    gl_Position = uProjectionMatrix * uModelViewMatrix * aPosition;
 }
 </script>
 
