Started trying to add lower parts of tentacles but can't attach

--- a/CG_F23_Program2_WoodLandon.html
+++ b/CG_F23_Program2_WoodLandon.html
@@ -10,6 +10,7 @@
 
 <div>
     tentacle_1 angle -60 <input id="slider1" type="range" min="-60" max="0" step="5" value="0"/> 0
+    tentacle_1_lower angle -180 <input id="slider9" type="range" min="-180" max="180" step="5" value="0"/> 180
 </div>
 
 <div>
