--- a/CG_F23_Program2_WoodLandon.html
+++ b/CG_F23_Program2_WoodLandon.html
@@ -5,6 +5,14 @@
 <canvas id="gl-canvas" width="512"" height="512"> </canvas>
 
 <div>
+    <button id = "Button1">Increase theta</button>
+    <button id = "Button2">Decrease theta</button>
+    <button id = "Button3">Increase phi</button>
+    <button id = "Button4">Decrease phi</button>
+</div>
+
+
+<div>
     base angle -180 <input id="slider0" type="range" min="-180" max="180" step="5" value="0"/> 180
 </div>
 
