Start on animation, mesh

--- a/CG_F23_Program2_WoodLandon.html
+++ b/CG_F23_Program2_WoodLandon.html
@@ -10,6 +10,11 @@
     <button id = "Button3">Increase phi</button>
     <button id = "Button4">Decrease phi</button>
 </div>
+<div>
+    <button id="Button5">Animate upper tentacle 1</button>
+    <button id="Button6">Animate lower tentacle 1</button>
+    <!-- <button id="Button7">Animate upper tentacle 2</button> -->
+</div>
 
 
 <div>
@@ -93,6 +98,7 @@ precision mediump float;
 
 in vec4 vColor;
 out vec4 fColor;
+uniform vec4 uColor;
 
 uniform vec4 uAmbientProduct;
 uniform vec4 uDiffuseProduct;
