--- a/CG_F23_Program2_WoodLandon.html
+++ b/CG_F23_Program2_WoodLandon.html
@@ -11,9 +11,7 @@
     <button id = "Button4">Decrease phi</button>
 </div>
 <div>
-    <button id="Button5">Animate upper tentacle 1</button>
-    <button id="Button6">Animate lower tentacle 1</button>
-    <!-- <button id="Button7">Animate upper tentacle 2</button> -->
+    <button id="Button5">Swim</button>
 </div>
 
 
@@ -121,9 +119,8 @@ void main() {
         specular = vec4(0.0, 0.0, 0.0, 1.0);
     } 
     
-    // How to add vColor in here? The lighting otherwise is always the weird brown/yellow from shadedSphere4
     fColor = (ambient + diffuse + specular);
-    //fColor.a = 1.0;
+    fColor.a = 1.0;
 }
 </script>
 
